# test-project

./: CMakeLists.txt  README.md  chess  chess_nnue  chess_nnue_dbg  chess_nnue_debug
scripts/: nnue_bin_to_pt.py  nnue_gen_weights.py  nnue_train.py  nnue_train_gpu.py
src/: bitboard.cpp  bitboard.h  eval.cpp  eval.h  main.cpp  movegen.cpp  movegen.h  nnue.cpp  nnue.h  perft.cpp  perft.h  position.cpp  position.h  search.cpp  search.h  tt.cpp  tt.h  types.h  uci.cpp
